@@ -603,11 +603,11 @@ proc do_tests {} {
     gdb_reinitialize_dir $srcdir/$subdir
     gdb_load $binfile
 
-    gdb_test_no_output "set language c++"
     gdb_test_no_output "set width 0"
 
     runto_main
 
+    gdb_test_no_output "set language c++"
     probe_demangler
     test_paddr_overloaded_functions
     test_paddr_operator_functions
